Added routing to react app.

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,4 +1,5 @@
 @import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css';
+@import 'https://www.w3schools.com/w3css/4/w3.css';
 
 html {
   background: url("./assets/cityscape-sunset.jpg") no-repeat center fixed;
