--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,17 +1,37 @@
 @import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css';
 @import 'https://www.w3schools.com/w3css/4/w3.css';
+/* @import 'https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'; */
 
 html {
   background: url("./assets/cityscape-sunset.jpg") no-repeat center fixed;
   background-size: cover;
 }
 
-.image-tile {
+.portfolio-background {
   background: url("./assets/laptop-programming.jpg") no-repeat center;
   background-size: cover;
 }
 
-#myFooter {
+#coco-container {
+  max-width: 2000px;
+  margin-top: 46px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+#coco-content {
+  text-align: center;
+  height: max-content;
+}
+
+#coco-content h2 {
+  padding-top: 50px;
+}
+
+#coco-content p {
+  padding: 0px 400px 0px 400px;
+}
+
+#coco-footer {
   position: fixed;
   bottom: 0;
   width: 100%;
