--- a/src/App/App.css
+++ b/src/App/App.css
@@ -2,9 +2,28 @@
 @import 'https://www.w3schools.com/w3css/4/w3.css';
 /* @import 'https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'; */
 
-html {
+.coco-container {
+  min-height: 100%;
+  position: relative;
+}
+
+html, body {
   background: url("./assets/cityscape-sunset.jpg") no-repeat center fixed;
   background-size: cover;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.coco-body {
+  padding-bottom: 120px;   /* Height of the footer */
+}
+
+.coco-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 120px;
 }
 
 #portfolio-background {
@@ -21,9 +40,6 @@ html {
   height: max-content;
 }
 
-.coco-container {
-}
-
 .coco-content {
   background-color: rgba(0, 255, 255, 0.5);
   padding-bottom: 20px;
@@ -36,6 +52,7 @@ html {
 }
 
 .coco-content p {
+  margin: 0;
   padding: 0px 400px 0px 400px;
 }
 
@@ -48,18 +65,13 @@ html {
   padding-top: 20px;
   display: inline-block;
   vertical-align: top;
+  background-color: rgba(220, 200, 10, 0.5);
 }
 
 #coco-cards-container:after {
   content: "";
   width: 100%;
   display: inline-block;
-}
-
-#coco-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
 }
 
 /* Social media icons */
