--- a/src/App/App.css
+++ b/src/App/App.css
@@ -37,8 +37,10 @@ html, body {
 }
 
 .nav-div ul {
+  text-align: center;
   margin: auto;
   width: 100%;
+  list-style-type: none;
 }
 
 li {
@@ -61,13 +63,11 @@ li {
 }
 
 .coco-body {
-  padding-bottom: 120px;
   background-color: rgba(255, 255, 255, 0.3);
 }
 
 /* Footer */
 .coco-footer {
-  position: fixed;
   text-align: center;
   bottom: 0;
   width: 100%;
@@ -75,8 +75,8 @@ li {
 }
 
 .coco-footer p {
+  text-align: center;
   margin: 0;
-  padding: 50px;
   font-size: 20px;
   font-family: 'Volkhov', sans-serif;
   color: rgba(0, 0, 0, 1.0);
@@ -84,9 +84,7 @@ li {
 
 /* Media Icons */
 .media-icons {
-  margin: auto;
-  width: 200px;
-  height: 40px;
+  text-align: center;
 }
 
 .media-icon {
@@ -94,7 +92,7 @@ li {
   display: inline-block;
   height: 35px;
   width: 35px;
-  margin: auto;
+  /* margin: auto; */
 }
 
 .media-icon:hover {
